@@ -221,6 +221,12 @@
 				<code>org.eclipse.sirius.diagram.ui.api.layout.CustomLayoutAlgorithm.CustomLayoutAlgorithmBuilder.setStandardArrangeSelectionMechanism(boolean)</code>
 			</li>
 		</ul>
+		<ul>
+			<li><span class="label label-success">Added</span> A new API in 
+				<code>org.eclipse.sirius.diagram.ui.tools.api.format.MappingBasedSiriusFormatManagerFactory</code> has been added to make it possible to apply a copy-paste format to an existing or a new diagram with different semantic targets. This API receives a mapping between the source and target semantic elements to retrieve which graphical element in the target diagram corresponds to the one in source diagram. See the 
+				<a href="developer/copy_paste_format_new_semantic.html">developer</a> documentation for more details.
+			</li>
+		</ul>
 		<h4 id="Changesinorg.eclipse.sirius.ui">Changes in  
 			<code>org.eclipse.sirius.ui</code>
 		</h4>
