@@ -40,6 +40,11 @@
 							<strong>Representations lazy loading (experimental)</strong>
 						</a>
 					</li>
+					<li>
+						<a href="copy_paste_format_new_semantic.html">
+							<strong>Diagram Copy-Paste format on new semantic targets</strong>
+						</a>
+					</li>
 				</ul>
 			</li>
 			<li>The Sirius platform is extensible, and the next sections describe some common extension scenarios:
